# bioma-framework

./: .env.example  .gitignore  .zenodo.json  BIOMA_VS_MARKET.md  BUSINESS_CASE.md  BUSINESS_CASE.pt-BR.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_SCOPE.md  COMPLIANCE_MAPPING.md  COMPLIANCE_MAPPING.pt-BR.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_AWS_EC2.md  DEPLOY_AWS_ECS.md  Dockerfile  EDITIONS.md  EDITIONS.pt-BR.md  ELITE_BENCHMARK.md  ESCOPO_COMERCIAL.md  ESTUDO_PROPOSITO_CONTEXTO.pt-BR.md  FINDINGS.md  FINDINGS.pt-BR.md  FRUGAL_AI_WHITEPAPER.md  FRUGAL_AI_WHITEPAPER.pt-BR.md  GOVERNMENT_BRAZIL.md  GOVERNMENT_BRAZIL.pt-BR.md  IMPLEMENTATION.md  IMPLEMENTATION.pt-BR.md  LICENSE  MARKET_BRAZIL.md  MARKET_BRAZIL.pt-BR.md  OVERVIEW.md  OVERVIEW.pt-BR.md  PURPOSE_CONTEXT_STUDY.md  README.md  README.pt-BR.md  SECURITY.md  TECHNICAL_DOSSIER.json  (+16 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-push-ecr.yml  build-push-lean.yml  ci.yml  deploy-ecs.yml  release.yml
assets/: make_how_it_works.py
benchmarks/ab-claude-code/: analyze.py  analyze_cached.py  analyze_growing.py  estimate_cost.py  make_cached_charts.py  models.yaml  run_benchmark.py  run_benchmark_growing.py  tasks.json
benchmarks/ab-claude-code/results/: REPORT.md  RESULTS.md  coefficients.yaml  make_charts.py
benchmarks/ab-claude-code/results/cached/: ANALYSIS_CACHED.txt  ANALYSIS_GROWING.txt  results_cached.jsonl
benchmarks/ab-publico/: README.md  analyze_growing.py  make_cached_charts.py  models.yaml  run_benchmark_cached.py  tasks.json
benchmarks/ab-publico/results/: ANALYSIS.txt  REPORT.md  RESULTS.md  make_charts.py  rerun_v131.jsonl  results.jsonl
bioma/: __init__.py  carbon_ledger.py  esg.py  esg_report.py  firewall_client.py  gateway.py  monitor.py  openrouter_client.py  server.py  vision.py
bioma_engine/: AUTONOMY.md  BENCHMARK_ORCHESTRATION.json  BENCHMARK_ORCHESTRATION.md  BENCHMARK_RESULT_QUALITY.json  BENCHMARK_RESULT_QUALITY.md  CONSOLIDATION.md  Dockerfile  HONESTY.md  M8_CERTIFICATE.json  M8_CERTIFICATE.md  PLANO_BIOMA.md  README.md  __init__.py  _eval_runner.py  autonomy.py  benchmark_orchestration.py  benchmark_result_quality.py  bioma_chat_test.html  bioma_cli_launcher.py  bioma_cloud_server.py  bioma_integration_hook.py  bioma_vigil_daemon.py  certify_m8.py  config.py  evolutionary_coder.py  hormonal_bus.py  local_inference_engine.py  mitosis_engine.py  observability.py  organism_core.py  repair.py  requirements.txt  run_local.py  run_server.sh  server.py  setup.py  simulation_harness.py  telemetry.py  validation.py
bioma_engine/models/: README.md
bioma_engine/paper/: bioma_paper.html  bioma_paper.tex  bioma_paper_ptbr.html  bioma_paper_ptbr.tex
bioma_engine/tests/: conftest.py  test_bioma_complete.py  test_integration_hook.py  test_local_production_stress.py  test_sovereign_cli.py
bioma_engine/tools/: smoke_client.py
bioma_kernel/: Cargo.toml  README.md  app.py  bioma_vs_traditional.py  nervous_system_dashboard.html  nervous_system_server.py  pyproject.toml  stress_benchmark.py
bioma_kernel/src/: lib.rs  memory.rs  mitosis_test.rs  telemetry.rs
bioma_micro/: CHANGELOG.md  Cargo.toml  PUBLISH.md  README.md  pyproject.toml
bioma_micro/src/: context_apoptosis.rs  effort_gauge.rs  hormonal_bus.rs  lib.rs
bioma_orchestrator/: FINOPS_REPORT.json  FINOPS_REPORT.md  README.md  __init__.py  context.py  evolution.py  finops_benchmark.py  live_pipeline.py  openrouter_async.py  orchestrator.py  providers.py
bioma_orchestrator/tests/: test_context.py  test_orchestrator.py
bioma_suite/: README.md  pyproject.toml
bioma_suite/bioma_suite/: __init__.py  doctor.py
demo/: apoptosis-scroll.html
deploy/: Dockerfile.lean
deploy/aws/: ec2-userdata.sh  oidc-permissions-policy.json  oidc-trust-policy.json  task-definition.json
integrations/bioma-langchain/: README.md  pyproject.toml
integrations/bioma-langchain/bioma_langchain/: __init__.py
integrations/bioma-langchain/tests/: test_dehydrate.py
reports/: BIOMA_BENCHMARK_COMPARATIVO.md  BIOMA_CLAUDE_CODE_SIM.md  BIOMA_E2E_LONG_SESSION.md  BIOMA_ENERGY_LOCAL.md  BIOMA_ESG_BENCHMARK.md  BIOMA_IMMUNITY_VERDICT.md  BIOMA_IMMUNITY_VERDICT.pt-BR.md  BIOMA_LATENCY.md  BIOMA_PIXEL_SECRETS.md  BIOMA_QUALITY_PRESERVATION.md  BIOMA_REVALIDACAO_V131.pt-BR.md  BIOMA_REVALIDATION_V131.md  BIOMA_UNIVERSAL_GAINS.md  BIOMA_UNIVERSAL_GAINS.pt-BR.md  BIOMA_VALIDATION_EVOLUTIONS.md  BIOMA_VISION_DISTILL.md  BIOMA_VISION_QUALITY.md  BIOMA_VS_LLMLINGUA.md  energy_local_runs.jsonl
resultados/: E2E_CLAUDE_CODE.md  MEDICOES_GATEWAY.md  REFERENCE_PILOT_ESG.md  SIMULACAO_MERCADO.md  cache_interaction.json  e2e_agent.json  e2e_claude_code.json  execucoes.csv  llmlingua_h2h.json  precos_openrouter.json  relatorio.md  usage_raw.jsonl
results/: auto_effort.json  auto_effort_quality.json  e2e_claude_code.json  e2e_claude_code_long.json  e2e_claude_code_long_armA_1m.json  kernel_latency.json  validation_audit_NEW.jsonl  validation_audit_OLD.jsonl  validation_config_OLD.json
tests/: benchmark_dev_openrouter.py  benchmark_llmlingua_h2h.py  e2e_agent_gateway.py  e2e_claude_code.py  e2e_claude_code_gwonly.py  e2e_claude_code_long.py  e2e_task_suite.py  gera_relatorio_devbench.py  measure_auto_effort.py  measure_auto_effort_quality.py  measure_cache_interaction.py  measure_energy_gpu.py  measure_kernel_latency.py  prove_anthropic_surface.py  prove_gateway_dropin.py  reference_pilot.py  simula_economia_mercado.py  simulate_claude_code_session.py  task_suite_defs.py  test_carbon_ledger.py  test_energy_local.py  test_enxuto_efficiency.py  test_esg.py  test_esg_benchmark.py  test_esg_report.py  test_evolutions.py  test_firewall.py  test_gateway.py  test_kernel.py  test_monitor.py  test_protocol_invariants.py  test_quality_preservation.py  test_server.py  test_sovereign_defense.py  test_suite_doctor.py  test_universal_integration.py  test_vision_distill.py  test_vision_quality_preservation.py  test_vision_secret_redaction.py
(+4 files in other folders)
