[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI name: `bioma` is squatted since 2017 (dmrib) — the distribution ships as
# `bioma-framework`; the import stays `import bioma`.
name = "bioma-framework"
version = "1.4.0"
description = "Client-side Frugal-AI layer: context apoptosis that auditably cuts LLM inference cost per deployment."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LicenseRef-FSL-1.1-MIT" }
authors = [{ name = "B.I.O.M.A." }]
keywords = ["llm", "tokens", "cost", "inference", "frugal-ai", "gateway", "context", "sustainability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
# Core install pulls the Rust micro-kernel. Everything else is opt-in.
dependencies = ["bioma_micro>=1.0.0"]

[project.optional-dependencies]
gateway = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27", "python-dotenv>=1.0"]
client = ["openai>=1.0", "python-dotenv>=1.0"]
anthropic = ["anthropic>=0.40"]
vision = ["pillow>=10", "imagehash>=4.3", "rapidocr-onnxruntime>=1.3", "opencv-python-headless>=4.9", "numpy>=1.24"]
monitor = ["rich>=13.7"]
ledger = ["cryptography>=42"]
all = [
    "fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27", "python-dotenv>=1.0",
    "openai>=1.0", "anthropic>=0.40",
    "pillow>=10", "imagehash>=4.3", "rapidocr-onnxruntime>=1.3",
    "opencv-python-headless>=4.9", "numpy>=1.24",
    "rich>=13.7", "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/jonathascordeiro20/bioma-framework"
Repository = "https://github.com/jonathascordeiro20/bioma-framework"

[project.scripts]
bioma-gateway = "bioma.gateway:_main"
bioma-monitor = "bioma.monitor:_main"
bioma-carbon-ledger = "bioma.carbon_ledger:_main"

[tool.hatch.build.targets.wheel]
packages = ["bioma"]

[tool.hatch.build.targets.sdist]
include = ["bioma", "README.md", "LICENSE"]
