[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "bioma_kernel"
description = "B.I.O.M.A. Rust kernel — microsecond hormonal bus + autonomous memory apoptosis."
requires-python = ">=3.8"
license = { text = "LicenseRef-FSL-1.1-MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

[tool.maturin]
# Build the abi3 extension module against the active interpreter.
features = ["pyo3/extension-module"]
