[package]
name = "bioma_micro"
version = "1.0.0"
edition = "2021"
description = "B.I.O.M.A. Micro-Kernel — lock-free hormonal bus + context apoptosis (PyO3)."
license = "LicenseRef-FSL-1.1-MIT"

[lib]
name = "bioma_micro"
# cdylib → a native Python extension module loadable by CPython.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
crossbeam-channel = "0.5"

# Aggressive optimisation for the microsecond hot path — inline everything, fuse
# codegen units. No panic="abort": PyO3 converts Rust panics into Python
# exceptions at the FFI boundary, which requires unwinding.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Standalone crate — its own workspace root, so nested-Cargo workspace
# resolution never clashes with any parent tree.
[workspace]
